# ez

./: .why_history  Cargo.toml  hello.ez
src/: code_graph.rs  compiler.rs  config.rs  debug_printer.rs  env.rs  env_modifier.rs  error.rs  interpreter.rs  jit.rs  lexer.rs  main.rs  repl.rs  stdlib.rs  stdlib_old.rs  types.rs
src/codegen/: codegen.rs  codegen_module.rs  compiler.rs  external_linker.rs  function_translator.rs  jit.rs  jit_ffi.rs  jit_stack_ffi.rs  mod.rs  translator.rs
src/error/: error.rs  mod.rs
src/interpreter/: env.rs  env_old.rs  mod.rs  value.rs
src/lexer/: ez_lexer.rs  mod.rs  sig_lexer.rs  token.rs  why_lexer.rs
src/parser/: ast.rs  mod.rs  node.rs  signature_parser.rs  signature_parsers.rs  type_env_modifier_parsers.rs
src/parser/types/: mod.rs  typ.rs  type_env.rs  typelist.rs  types.rs
src/repl/: completer.rs  highlighter.rs  hinter.rs  mod.rs  repl_helper.rs  symbols.rs
src/stdlib/: functions.rs  library.rs  macros.rs  mod.rs  native.rs
src/typechecker/: assigment.rs  mod.rs  signature.rs  type_env.rs  type_node.rs  types.rs
