[package]
name = "ez"
description = "A small, stack-based, statically-typed programming language"
version = "0.1.0"
edition = "2021"
authors = ["Nick Fischer <fischer-nick@outlook.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
ariadne = "0.2.0"
clap = { version = "4.1.1", features = ["derive", "cargo"] }
yansi = "0.5.1"
nu-ansi-term = "*"
rand = "0.8.5"
reedline = "0.17.0"
lazy_static = "1.4.0"
cranelift = "0.93.1"
cranelift-jit = "0.93.1"
cranelift-object = "0.93.1"
cranelift-module = "0.93.1"
cranelift-native = "0.93.1"
weighted_trie = "0.1.3"